# capacitor_bindings

./: AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  sort_derive.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: publish.yml  test.yml
example_application/: .gitignore  Cargo.toml  android.html  build_android.sh  capacitor.config.json  index.html  index.scss  ios.html  package-lock.json  package.json  rust-toolchain.toml  trunk.toml
example_application/android/app/src/main/: AndroidManifest.xml
example_application/android/app/src/main/res/values/: strings.xml
example_application/ios/App/: Podfile
example_application/ios/App/App/: Info.plist
example_application/ios/App/App.xcodeproj/: project.pbxproj
example_application/plugins/: capacitor-rate-app.js  import-map.json
example_application/plugins/@capacitor/: action-sheet.js  app.js  browser.js  camera.js  clipboard.js  core.js  device.js  dialog.js  haptics.js  local-notifications.js  motion.js  network.js  preferences.js  screen-reader.js  share.js  splash-screen.js  status-bar.js  toast.js
example_application/plugins/@capacitor-community/: in-app-review.js
example_application/plugins/common/: web-171ab330.js  web-207a4df5.js  web-2544e789.js  web-266235e8.js  web-42b8cd91.js  web-47224e2e.js  web-5343d4a6.js  web-53a6aa72.js  web-57b01c7b.js  web-5a0a728c.js  web-672d63c0.js  web-67daad1f.js  web-73f790ea.js  web-8e565224.js  web-926d467e.js  web-9686859a.js  web-9c42efba.js  web-c35afa81.js  web-d47d0e1c.js  web-e548ef3f.js
example_application/src/: app.rs  app_funcs.rs  app_launcher.rs  browser.rs  clipboard.rs  haptics.rs  listener.rs  main.rs  motion.rs  network.rs  notifications.rs  preferences.rs  rate.rs  safe_area.rs  screen_reader.rs  splash.rs  toast.rs
src/: action_sheet.rs  admob.rs  app.rs  app_launcher.rs  browser.rs  camera.rs  clipboard.rs  device.rs  dialog.rs  error.rs  extern_functions.rs  game_connect.rs  haptics.rs  helpers.rs  lib.rs  local_notifications.rs  motion.rs  network.rs  plugin_listener_handle.rs  preferences.rs  rate.rs  safe_area.rs  screen_reader.rs  share.rs  splash_screen.rs  status_bar.rs  toast.rs
