[package]
name = "capacitor_bindings"
version = "0.9.0"
edition = "2021"
authors = ["Mark Wainwright <wainwrightml@gmail.com>"]
description = "Capactior bindings to help you build android and ios apps with rust."
documentation = "https://docs.rs/capacitor_bindings"
repository = "https://github.com/wainwrightmark/capacitor_bindings"
readme = "README.md"
keywords = ["capacitor", "bindings", "mobile", "app", "web"            ]
categories = [
    # "api-bindings"
]
license = "MIT"

[dependencies]
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.5"
serde_with = "3.0.0"
typed-builder = "0.14.0"
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = "0.4"

[dev-dependencies]
serde_test = "1"
serde_json = "1"

[features]
web =[]
android = []
ios = []
