[package]
name = "example"
version = "0.3.0"
edition = "2021"
description = "Example of using capacitor with trunk and yew"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk", "capcitor"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
js-sys = "0.3.61"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = "0.4.34"
wasm-logger = "0.2.0"
yew = { version="0.20", features=["csr"] }

capacitor_bindings = { path = ".." }
yewdux = "0.9.2"


[features]
web =["capacitor_bindings/web"]
android = ["capacitor_bindings/android"]
ios = ["capacitor_bindings/ios"]
