[package]
name = "example"
version = "0.4.0"
edition = "2021"
description = "Example of using capacitor with trunk and yew"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk", "capcitor"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
js-sys = "0.3"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2.0"
yew = { version="0.21", features=["csr"] }

capacitor_bindings = { path = "..", features=["rate_plugin"] }
yewdux = "0.10"


[features]
web =["capacitor_bindings/web"]
android = ["capacitor_bindings/android"]
ios = ["capacitor_bindings/ios"]
